--- a/charts/dex/Chart.yaml
+++ b/charts/dex/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: keycloak
+name: dex
 description: A Helm chart for Kubernetes
 
 type: application
@@ -7,6 +7,6 @@ version: 0.1.0
 appVersion: "1.16.0"
 
 dependencies:
-  - name: keycloak
-    version: 21.1.3
-    repository: https://charts.bitnami.com/bitnami
+  - name: dex
+    version: 0.17.1
+    repository: https://charts.dexidp.io
