--- a/charts/argo-workflows/values.yaml
+++ b/charts/argo-workflows/values.yaml
@@ -6,7 +6,7 @@ argo-workflows:
       enabled: true
       ingressClassName: "nginx"
       hosts:
-        - awf.alex.localhost
+        - keycloak.alex.localhost
       paths:
         - /
       pathType: Prefix
