--- a/charts/monitoring/Chart.yaml
+++ b/charts/monitoring/Chart.yaml
@@ -7,8 +7,8 @@ version: 0.1.0
 appVersion: "1.16.0"
 
 dependencies:
-  - name: kube-prometheus-stack
-    version: 58.2.2
-    repository: https://prometheus-community.github.io/helm-charts
+  - name: victoria-metrics-k8s-stack
+    version: 0.24.3
+    repository: https://victoriametrics.github.io/helm-charts/
 
 
