--- a/charts/monitoring/values.yaml
+++ b/charts/monitoring/values.yaml
@@ -102,6 +102,8 @@ victoria-metrics-k8s-stack:
 
     ingress:
       enabled: true
+      annotations:
+        kubernetes.io/ingress.class: nginx
       hosts:
         - grafana.alex.localhost
 
