--- a/charts/monitoring/values.yaml
+++ b/charts/monitoring/values.yaml
@@ -25,6 +25,8 @@ victoria-metrics-k8s-stack:
 
   alertmanager:
     enabled: true
+  defaultRules:
+    create: false
 
   vmagent:
     enabled: true
