--- a/charts/monitoring/values.yaml
+++ b/charts/monitoring/values.yaml
@@ -140,6 +140,8 @@ victoria-metrics-k8s-stack:
 
   prometheus-node-exporter:
     enabled: true
+    hostRootFsMount:
+      enabled: false
 
   kube-state-metrics:
     enabled: true
