Test monitoring. Add dashboards

--- a/charts/monitoring/templates/grafana-dashboards-configmap.yaml
+++ b/charts/monitoring/templates/grafana-dashboards-configmap.yaml
@@ -9,3 +9,5 @@ data:
 {{ .Files.Get "dashboards/argocd.json" | indent 4 }}
   kubernetes.json: |
 {{ .Files.Get "dashboards/kubernetes.json" | indent 4 }}
+  home.json: |
+{{ .Files.Get "dashboards/home.json" | indent 4 }}
