--- a/charts/monitoring/templates/grafana-dashboards-configmap.yaml
+++ b/charts/monitoring/templates/grafana-dashboards-configmap.yaml
@@ -2,8 +2,6 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: grafana-external-dashboards
-  labels:
-    grafana_dashboard: "1"
 data:
   argocd.json: |
 {{ .Files.Get "dashboards/argocd.json" | indent 4 }}
@@ -11,3 +9,5 @@ data:
 {{ .Files.Get "dashboards/kubernetes.json" | indent 4 }}
   home.json: |
 {{ .Files.Get "dashboards/home.json" | indent 4 }}
+  minio.json: |
+{{ .Files.Get "dashboards/minio.json" | indent 4 }}
