--- a/charts/monitoring/templates/grafana-dashboards-configmap.yaml
+++ b/charts/monitoring/templates/grafana-dashboards-configmap.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: grafana-external-dashboards
+  labels:
+    grafana_dashboard: "1"
 data:
   argocd.json: |
 {{ .Files.Get "dashboards/argocd.json" | indent 4 }}
