--- a/charts/fluent/values.yaml
+++ b/charts/fluent/values.yaml
@@ -19,16 +19,25 @@ fluent-bit:
 
     inputs: |
       [INPUT]
-          Name tail
-          Path /var/log/containers/*.log
-          multiline.parser docker, cri
-          Tag kube.*
-          Mem_Buf_Limit 5MB
-          Skip_Long_Lines On
+          Name    tail
+          Tag     kube.*
+          Path    /var/log/containers/*.log
+          multiline.parser              docker, cri
+
+    filters: |
+      [FILTER]
+          Name             kubernetes
+          Match            kube.*
+          Kube_URL         https://kubernetes.default.svc:443
+          Kube_CA_File     /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+          Kube_Token_File  /var/run/secrets/kubernetes.io/serviceaccount/token
+          Kube_Tag_Prefix  kube.var.log.containers.
+          Merge_Log        On
+          Merge_Log_Key    log_processed
 
     outputs: |
       [OUTPUT]
           name   loki
-          match  *
+          match  kube.*
           host   loki-gateway.loki
           port   80
